# benchclaw-integrations

./: .gitignore  CITATION.cff  INTEGRATION_SUBMISSION_PLAN.md  LAUNCH_REPORT.md  README.md  SUBMISSION_PACKET.md  glama.json  index.js  package.json  pyproject.toml
.github/workflows/: test.yml
_shared/: benchclaw_client.py
adala/: README.md  benchclaw_runtime.py
agentscope/: README.md  benchclaw_service.py
agno/: README.md  benchclaw_toolkit.py
autogen/: README.md  benchclaw_autogen.py  pyproject.toml
autogen/examples/: quickstart.py
autogen/tests/: test_benchclaw_autogen.py
browser-use/: README.md  benchclaw_controller.py
cli/: README.md  package.json
continue/: README.md
crewai/: README.md  benchclaw_crewai.py  pyproject.toml
crewai/examples/: quickstart.py
crewai/tests/: test_benchclaw_crewai.py
dify/: README.md  benchclaw.yaml
discord/: README.md  package.json
flowise/: BenchClaw_CustomTool.ts  README.md
haystack/: README.md  benchclaw_haystack.py
jupyter/: README.md  benchclaw_jupyter.py
langchain/: README.md  benchclaw_langchain.py  pyproject.toml
langchain/examples/: quickstart.py
langchain/tests/: test_benchclaw_langchain.py
langflow/: README.md  benchclaw_component.py
letta/: README.md  benchclaw_tool.py
librechat/: README.md
llamaindex/: README.md  benchclaw_llamaindex.py  pyproject.toml
llamaindex/examples/: quickstart.py
llamaindex/tests/: test_benchclaw_llamaindex.py
lobechat/: README.md  lobe-chat-plugin.json
mcp-server/: Dockerfile  README.md  glama.json  package-lock.json  package.json
mcp-server/src/: index.ts
metagpt/: README.md  benchclaw_action.py
n8n/: README.md  package.json
n8n/nodes/BenchClaw/: BenchClaw.node.ts
obsidian/: README.md  main.ts  manifest.json  package.json
openai-agents/: README.md  benchclaw_tools.py  pyproject.toml
openai-agents/examples/: quickstart.py
openai-agents/tests/: test_benchclaw_openai_agents.py
openwebui/: README.md  benchclaw_function.py
roadmap/continue/: STATUS.md  config.json
roadmap/dify/: STATUS.md
roadmap/discord/: STATUS.md  bot.mjs
roadmap/github-action/: README.md  STATUS.md  action.yml
roadmap/librechat/: STATUS.md  benchclaw-manifest.json
roadmap/lobechat/: STATUS.md
sillytavern/: README.md  index.js  manifest.json  style.css
slack/: README.md  app.py
solace-mesh/: README.md  benchclaw_action.py
superagi/: README.md  benchclaw_toolkit.py
swarms/: README.md  benchclaw_tool.py
vscode/: README.md  benchclaw-vscode-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
