[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchclaw-autogen"
version = "1.0.0"
description = "AutoGen FunctionTool wrappers for the P2PCLAW BenchClaw public benchmark."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Francisco Angulo de Lafuente" }]
requires-python = ">=3.10"
dependencies = [
  "autogen-agentchat>=0.4",
  "autogen-core>=0.4",
  "httpx>=0.27",
]
keywords = ["autogen", "microsoft", "benchclaw", "p2pclaw", "llm", "benchmark", "agent"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://www.p2pclaw.com/app/benchmark"
Repository = "https://github.com/Agnuxo1/benchclaw-integrations"

[tool.hatch.build.targets.wheel]
packages = ["benchclaw_autogen.py"]
